Fixed css issues. - scroll whole page when doesn't fit - set max size of form when doesn't fit and scroll

--- a/web/Jhu.Graywulf.Web.UI/App_Themes/Basic/Css/forms.css
+++ b/web/Jhu.Graywulf.Web.UI/App_Themes/Basic/Css/forms.css
@@ -22,6 +22,7 @@ table.DetailsForm {
 
 div.FormFrame {
     border: 1px solid #C0C0C0;
+    background-color: #FFFFFF;
     box-shadow: 0px 12px 6px -6px #c0c0c0;
     padding: 8px;
 }
