--- a/web/Jhu.Graywulf.Web.UI/App_Themes/Basic/style.less
+++ b/web/Jhu.Graywulf.Web.UI/App_Themes/Basic/style.less
@@ -90,7 +90,7 @@ body {
     visibility: hidden;
 }
 
-.dock-center .dock-scroll {
+.dock-center, .dock-scroll {
     overflow-y: auto;
     padding-right: @gutter;
     margin-right: 0px;
